Fix small style issues in form preview and hakemus details
Issues: certain input borders not showing, incorrect font sizes and
paddings.

--- a/va-virkailija/web/va/hakemus-details/hakemusDetails.less
+++ b/va-virkailija/web/va/hakemus-details/hakemusDetails.less
@@ -1,10 +1,24 @@
 #tab-content {
   .soresu-key,
-  .soresu-value { width: 100%; }
+  .soresu-value {
+    width: 100%;
+  }
   .extra-small,
   .small,
   .medium,
-  div.soresu-attachment-block { width: auto; padding: 0; border: none; }
-  .soresu-preview-element { margin-top: 0; display: block; }
-  .soresu-theme { margin:0; }
+  .soresu-attachment-block {
+    width: auto;
+    font-size: inherit;
+  }
+  .soresu-attachment-block {
+    border: none;
+    padding: 0;
+  }
+  .soresu-preview-element {
+    margin-top: 0;
+    display: block;
+  }
+  .soresu-theme {
+    margin: 0;
+  }
 }
