--- a/va-virkailija/web/va/style/formpreview.less
+++ b/va-virkailija/web/va/style/formpreview.less
@@ -90,6 +90,7 @@
     }
     .soresu-attachment-block {
       width: auto;
+      font-size: 15px;
     }
     .va-budget {
       .summing-table, .budget-summary {
